2007-02-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeAssign): return (itemp) right instead of left
	  for better fix of bug 1273984, compiles pic16 rand.c

2007-02-12 Borut Razem <borut.razem AT siol.net>

	* src/pic16/main.c: fixed pic16 standard library directory bug

2007-02-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genSwap): fix swap regression test

2007-02-10 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsymt.c: fixed bug #1159134: invalid duplicate declarations
	  with same scope
	* support/regression/tests/bug-1654060.c: added regression test for
	  #1654060

2007-02-09 Bernhard Held <bernhard AT bernhardheld.de>

	* src/mcs51/gen.c (genRet): fixed RFE 1652561: added code for bit to
	bit moves in return statement

2007-02-09 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y: fixed bug #1654060 typedef within function causes
	  syntax error

2007-02-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopPut): use direct name for pushing registers
	* src/SDCCmain.c (parseCmdLine): dbuf_s path must be initialised

2007-02-07 Raphael Neider <rneider AT web.de>

	* src/pic16/devices.inc,
	* device/include/pic16/pic18fregs.h,
	* device/include/pic16/pic18f[24][34]31.h,
	* device/lib/pic16/libdev/pic18f[24][34]31.c,
	* device/lib/pic16/pics.all: added 18f[24][34]31 family
	* device/lib/pic16/libio/i2c.ignore: do not build i2c

2007-02-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c (_print_format): fixed compare/assign bug, how
	  can this have lived here for so many years?
	* src/SDCCicode.c (ast2iCode): return left instead of right for assignment,
	  fixes bug 1273984, see also patch 1645121, thanks Gnther Jehle
	* support/regression/tests/bug1273984.c: new, added, thanks Gnther Jehle

2007-02-06 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCBlock.c (addiCodeToeBBlock): fixed bug 1652207: GOTO icodes